image setup and send

--- a/server/public/views/publicacao.html
+++ b/server/public/views/publicacao.html
@@ -163,25 +163,10 @@
                                     <textarea name="Descricao" id="Descricao" class="form-control" placeholder="Descrição do Evento" rows="3" required></textarea>
                                     <label for="Descricao">Descrição do Evento</label>
                                 </div>
-                            
-                                <div class="row">
-                                    <div class="col-lg-6 col-md-6 col-12">
-                                        <div class="form-floating">
-                                            <input type="text" name="Organizador" id="Organizador" class="form-control" placeholder="Nome do Organizador" required>
-                                            <label for="Organizador">Nome do Organizador</label>
-                                        </div>
-                                    </div>
-                            
-                                    <div class="col-lg-6 col-md-6 col-12">
-                                        <div class="form-floating">
-                                            <input type="text" name="InfoIngresso" id="InfoIngresso" class="form-control" placeholder="Informações de Ingresso (opcional)">
-                                            <label for="InfoIngresso">Informações de Ingresso (opcional)</label>
-                                        </div>
-                                    </div>
-                                </div>
+                        
                             
                                 <div class="form-floating">
-                                    <input type="text" name="ImagemCartaz" id="ImagemCartaz" class="form-control" placeholder="URL da Imagem do Cartaz">
+                                    <input type="file" name="imagem" id="ImagemCartaz" class="form-control" placeholder="URL da Imagem do Cartaz">
                                     <label for="ImagemCartaz">URL da Imagem do Cartaz</label>
                                 </div>
                             
